# rap

./: Cargo.toml  LICENSE  config.jsonc  config.toml
src/: audio_engine.rs  input.rs  logger.rs  main.rs  mpv_handler.rs
src/audio_engine/: commands.rs  engine.rs  mod.rs  opus_source.rs  source_factory.rs  status.rs  symphonia_source.rs  visualizer.rs
src/audio_engine/decoder/: mod.rs
src/audio_engine/visualizer/: analyzer.rs  mod.rs  source.rs
src/config/: config.rs  mod.rs
src/parser/: artist.rs  main_tab.rs  metadata.rs  mod.rs
src/tui/: main_tab.rs  mod.rs
src/tui/widgets/: cava.rs  center.rs  library.rs  logo.rs  mod.rs  search.rs
