[package]
name = "rmpt"
version = "0.1.7"
edition = "2024"

[dependencies]
chrono = "0.4.44"
lofty = "0.23.2"
opus-codec = "0.1.2" 
ogg = "0.9"
rodio = { version = "0.22.2", features = ["symphonia-all"] }
tokio = { version = "1.50.0", features = ["full"] }


[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
panic = "abort"
strip = true
