[package]
name = "rmpt"
version = "0.3.3"
edition = "2024"

[dependencies]
chrono = "0.4.44"
lofty = "0.23.2"
opus-codec = "0.1.2"
ogg = "0.9"
rodio = { version = "0.22.2", features = ["symphonia-all", "symphonia-isomp4"] }
symphonia = { version = "0.5", features = ["all-formats", "all-codecs", "isomp4"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30.0"
crossterm = "0.29.0"
dirs = "6.0.0"
json5 = "1.3.1"
realfft = "3.5.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
